# wagtail-newsletter

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml  testmanage.py  tox.ini
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: nightly.yml  publish.yml  test.yml
demo/: README.md  __init__.py  apps.py  blocks.py  fields.py  manage.py  models.py  settings.py  urls.py  viewsets.py  wagtail_hooks.py
demo/migrations/: 0001_initial.py  0002_articlepage_newsletter_mixin.py  0003_alter_articlepage_options.py  0004_articlepage_newsletter_preview.py
demo/static/css/: wagtail_newsletter_test.css
demo/templates/: base.html
demo/templates/blocks/: image_block.html
demo/templates/demo/: article_page.html  article_page_newsletter.html
demo/templates/wagtailcore/: page.html
docs/: conf.py  customization.rst  index.rst  installation.rst  settings.rst  usage.rst
tests/: conftest.py  test_audit_log.py  test_campaign_actions.py  test_campaign_view.py  test_mrml.py  test_page_mixin_model.py  test_panel.py  test_recipients_model.py  test_recipients_viewsets.py  test_rich_text.py
tests/actions/: conftest.py  test_restrictions.py  test_save_campaign.py  test_schedule_campaign.py  test_send_campaign.py  test_send_test_email.py  test_unschedule_campaign.py
tests/campaign_backends/: test_listmonk_backend.py  test_lookup.py  test_mailchimp_backend.py
tests/campaign_backends/listmonk/api/: README.md  _utils.py  conf.py  test_campaigns.py  test_lists.py
wagtail_newsletter/: __init__.py  actions.py  apps.py  audiences.py  forms.py  models.py  panels.py  rich_text.py  views.py  viewsets.py  wagtail_hooks.py
wagtail_newsletter/campaign_backends/: __init__.py  _utils.py  mailchimp.py
wagtail_newsletter/campaign_backends/listmonk/: __init__.py
wagtail_newsletter/campaign_backends/listmonk/api/: __init__.py  campaigns.py  errors.py  lists.py
wagtail_newsletter/migrations/: 0001_initial.py
wagtail_newsletter/static/wagtail_newsletter/css/: wagtail_newsletter.css
wagtail_newsletter/static/wagtail_newsletter/js/: wagtail_newsletter.js
wagtail_newsletter/templates/wagtail_newsletter/: campaign.html
wagtail_newsletter/templates/wagtail_newsletter/panels/: newsletter_panel.html
wagtail_newsletter/templatetags/: wagtail_newsletter.py
wagtail_newsletter/test/: apps.py  models.py  settings.py  urls.py
wagtail_newsletter/test/migrations/: 0001_initial.py  0002_simplepage.py
wagtail_newsletter/test/templates/: base.html
wagtail_newsletter/test/templates/wagtail_newsletter_test/: article_page.html  newsletter.html
