[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-newsletter"
authors = [{name = "Alex Morega", email = "alex.morega@torchbox.com"}]
description = "Turn Wagtail pages into newsletters."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 5",
    "Framework :: Wagtail :: 6",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "Django>=4.2",
    "Wagtail>=5.2",
    "queryish>=0.2",
]

[project.optional-dependencies]
testing = [
    "dj-database-url==2.1.0",
    "django-debug-toolbar==4.4.2",
    "django-stubs==4.2.7",
    "pre-commit==3.4.0",
    "pyright==1.1.360",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pytest-django==4.8.0",
]
ci = [
    "tox==4.11.3",
    "tox-gh-actions==3.1.3",
]
docs = [
    "sphinx==7.3.7",
    "sphinx-wagtail-theme==6.3.0",
]
mailchimp = [
    "mailchimp-marketing>=3.0.80",
]
mrml = [
    "mrml>=0.1.13",
]

[project.urls]
Home = "https://github.com/wagtail/wagtail-newsletter"

[tool.flit.module]
name = "wagtail_newsletter"

[tool.flit.sdist]
exclude = [
    "wagtail_newsletter/test",
    "testmanage.py",
    "tests",
    "demo",
    "docs",
    ".*",
    "*.ini",
    "*.yml",
]

[tool.pyright]
pythonVersion = "3.8"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "wagtail_newsletter.test.settings"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:The default scheme will be changed.*forms.URLField:django.utils.deprecation.RemovedAfterNextVersionWarning",
    "ignore:'index_together' is deprecated:django.utils.deprecation.RemovedAfterNextVersionWarning",
]
