[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-newsletter"
authors = [{name = "Alex Morega", email = "alex.morega@torchbox.com"}]
description = "Turn Wagtail pages into newsletters."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 6",
    "Framework :: Wagtail :: 7",
]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "Django>=4.2",
    "Wagtail>=6.3",
    "queryish>=0.2",
]

[project.optional-dependencies]
testing = [
    "dj-database-url",
    "django-debug-toolbar",
    "django-stubs",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-django",
]
docs = [
    "sphinx",
    "sphinx-wagtail-theme",
    "sphinx-autobuild",
]
mailchimp = [
    "mailchimp-marketing>=3.0.80",
]
mrml = [
    "mrml>=0.2",
]
dev = [
    "wagtail-newsletter[testing,docs,mailchimp,mrml]",
    "psycopg",
    "flit",
]

[project.urls]
Home = "https://github.com/wagtail/wagtail-newsletter"

[tool.flit.module]
name = "wagtail_newsletter"

[tool.flit.sdist]
exclude = [
    "wagtail_newsletter/test",
    "testmanage.py",
    "tests",
    "demo",
    "docs",
    ".*",
    "*.ini",
    "*.yml",
]

[tool.pyright]
pythonVersion = "3.10"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "wagtail_newsletter.test.settings"
pythonpath = ["."]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:The default scheme will be changed.*forms.URLField:django.utils.deprecation.RemovedAfterNextVersionWarning",
    "ignore:'index_together' is deprecated:django.utils.deprecation.RemovedAfterNextVersionWarning",
]
